<resources>
    <string name="app_name">MOBV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_on_map">Show on map</string>
    <string name="longitude">Longitude :</string>
    <string name="restaurant_name">Restaurant Name :</string>
    <string name="name">Name :</string>
    <string name="latitude">Latitude :</string>
    <string name="name_reg">Name</string>
    <string name="restaurant_name_reg">Restaurant name</string>
    <string name="latitude_reg">Latitude</string>
    <string name="longitude_reg">Longitude</string>
    <string name="confirm_reg">Confirm</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="word_count">WordCount</string>
    <string name="score">Score</string>

</resources>