<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetailPub">

    <TextView
        android:id="@+id/detailPub_pubName"
        android:text="@string/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/detailPub_pubNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/detailPub_pubName"
        app:layout_constraintTop_toTopOf="@id/detailPub_pubName"
        android:layout_marginStart="20dp"
        />

<!--WEBPAGE-->

    <TextView
        android:id="@+id/detailPub_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:text="Bar Type:"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailPub_pubName" />

    <TextView
        android:id="@+id/detailPub_websiteValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/detailPub_website"
        app:layout_constraintTop_toTopOf="@id/detailPub_website"
        android:layout_marginStart="20dp"
        />

<!--    PHONE NUMBER-->

    <TextView
        android:id="@+id/detailPub_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="Users:"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailPub_website" />

    <TextView
        android:id="@+id/detailPub_phoneNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/detailPub_phoneNumber"
        app:layout_constraintTop_toTopOf="@id/detailPub_phoneNumber"
        android:layout_marginStart="20dp"
        />

<!--    OPENING HOURS-->


    <TextView
        android:id="@+id/detailPub_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/latitude"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPub_phoneNumber" />

    <TextView
        android:id="@+id/detailPub_latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/detailPub_latitude"
        app:layout_constraintTop_toTopOf="@id/detailPub_latitude"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/detailPub_longitude"
        android:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/detailPub_latitude"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/detailPub_longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/detailPub_longitude"
        app:layout_constraintTop_toTopOf="@id/detailPub_longitude"
        android:layout_marginStart="20dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="366dp"
        android:layout_height="353dp"
        app:layout_constraintBottom_toTopOf="@+id/button_showMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPub_longitude"
        app:layout_constraintVertical_bias="0.333"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/summer_drink" />

    <Button
        android:id="@+id/button_showMap"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/show_on_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
