<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Detail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:id="@+id/tv2"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tv_restaurantName"
        app:layout_constraintLeft_toRightOf="@id/tv2"
        app:layout_constraintTop_toTopOf="@id/tv2"
        android:layout_marginStart="20dp"
        />

<!--WEBPAGE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Webpage:"
        android:id="@+id/detail_webpage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_webpage_value"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/detail_webpage"
        app:layout_constraintTop_toTopOf="@id/detail_webpage"
        android:layout_marginStart="20dp"
        />

<!--    PHONE NUMBER-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone number:"
        android:id="@+id/detail_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/detail_webpage"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_phone_value"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/detail_phone"
        app:layout_constraintTop_toTopOf="@id/detail_phone"
        android:layout_marginStart="20dp"
        />

<!--    OPENING HOURS-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Opening Hours:"
        android:id="@+id/detail_openhours"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/detail_phone"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_openhours_value"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/detail_openhours"
        app:layout_constraintTop_toTopOf="@id/detail_openhours"
        android:layout_marginStart="20dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:id="@+id/tv3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/detail_openhours"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tv_latitude"
        app:layout_constraintLeft_toRightOf="@id/tv3"
        app:layout_constraintTop_toTopOf="@id/tv3"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:id="@+id/tv4"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tv_longitude"
        app:layout_constraintLeft_toRightOf="@id/tv4"
        app:layout_constraintTop_toTopOf="@id/tv4"
        android:layout_marginStart="20dp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="366dp"
        android:layout_height="353dp"
        app:layout_constraintBottom_toTopOf="@+id/button_showMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
        app:layout_constraintVertical_bias="0.333"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/summer_drink" />

    <Button
        android:id="@+id/button_showMap"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/show_on_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
